--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-babel": "5.2.1"
   },
   "dependencies": {
+    "bluebird": "^3.1.1",
     "dotenv": "^1.2.0",
     "fs": "0.0.2",
     "jsforce": "^1.5.0",
