--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel": "5.8.23",
-    "fs-extra": "0.24.0",
+    "fs-extra": "^0.26.3",
     "gulp": "3.9.0",
     "gulp-babel": "5.2.1"
   },
@@ -26,6 +26,7 @@
     "lodash": "^3.10.1",
     "q": "^1.4.1",
     "restler": "^3.4.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "xml2js": "^0.4.15"
   }
 }
