--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "bluebird": "^3.1.1",
     "dotenv": "^1.2.0",
     "fs": "0.0.2",
+    "gulp-util": "^3.0.7",
     "jsforce": "^1.5.0",
     "lodash": "^3.10.1",
     "q": "^1.4.1",
     "restler": "^3.4.0",
+    "through2": "^2.0.0",
     "underscore": "^1.8.3",
     "xml2js": "^0.4.15"
   }
