--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-sf-run-test",
   "version": "0.0.1",
-  "description": "gulp plugin for running test-code on salesforce",
+  "description": "gulp plugin for running apex-tests on salesforce",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,13 +20,12 @@
   },
   "dependencies": {
     "bluebird": "^3.1.1",
+    "date-utils": "^1.2.17",
     "dotenv": "^1.2.0",
     "fs": "0.0.2",
     "gulp-util": "^3.0.7",
     "jsforce": "^1.5.0",
-    "lodash": "^3.10.1",
-    "q": "^1.4.1",
-    "restler": "^3.4.0",
+    "sleep": "^3.0.0",
     "through2": "^2.0.0",
     "underscore": "^1.8.3",
     "xml2js": "^0.4.15"
