--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gulp-sf-run-test",
-  "version": "0.0.1",
+  "version": "0.5.0",
   "description": "gulp plugin for running apex-tests on salesforce",
-  "main": "index.js",
+  "main": "run-sf-test.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
